[gd_scene load_steps=3 format=3 uid="uid://dg7co7gpsccdn"]

[ext_resource type="Script" path="res://hud.gd" id="1_kli1f"]
[ext_resource type="FontFile" uid="uid://cs2xn4s8ah7g7" path="res://fonts/Pixeled.ttf" id="2_cqpgc"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_kli1f")

[node name="score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.0
offset_right = 126.0
offset_bottom = 171.0
grow_horizontal = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_cqpgc")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -84.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_cqpgc")
theme_override_font_sizes/font_size = 39
text = "   Do the best "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartBoutton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -210.0
offset_right = 94.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_cqpgc")
theme_override_font_sizes/font_size = 36
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartBoutton" to="." method="_on_start_boutton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
